objects/Account_Segment__c.object
<CustomObject>
    <fields>
        <fullName>Account_Details_by_Show__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Details by Show</label>
        <referenceTo>Account_Details_by_Show__c</referenceTo>
        <relationshipLabel>Account Segments</relationshipLabel>
        <relationshipName>Account_Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Segments</relationshipLabel>
        <relationshipName>Account_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsNewExhibitor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this is the first time this exhibitor exhibit at the show.</inlineHelpText>
        <label>New Exhibitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NSF__c</fullName>
        <label>NSF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SegmentName__c</fullName>
        <formula>Segment__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SegmentName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <referenceTo>Segment__c</referenceTo>
        <relationshipLabel>Account Segments</relationshipLabel>
        <relationshipName>Account_Categories</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ShowName__c</fullName>
        <formula>Segment__r.Show__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ShowName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubShowName__c</fullName>
        <formula>Segment__r.SubShow__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubShowName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT(Segment__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Account Segment</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Account Segment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Segments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>